// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavIcon /> should render component when current 1`] = `
<span
  className="sc-bdVaJa iBGCyK"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-1"
    focusable="false"
    role="presentation"
    style={
      Object {
        "fontSize": undefined,
      }
    }
    viewBox="0 0 24 24"
  >
    <path
      d="M22 10l-6-6H4c-1.1 0-2 .9-2 2v12.01c0 1.1.9 1.99 2 1.99l16-.01c1.1 0 2-.89 2-1.99v-8zm-7-4.5l5.5 5.5H15V5.5z"
    />
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
  </svg>
</span>
`;

exports[`<NavIcon /> should render component when not current 1`] = `
<span
  className="sc-bdVaJa yLiua"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-1"
    focusable="false"
    role="presentation"
    style={
      Object {
        "fontSize": undefined,
      }
    }
    viewBox="0 0 24 24"
  >
    <path
      d="M22 10l-6-6H4c-1.1 0-2 .9-2 2v12.01c0 1.1.9 1.99 2 1.99l16-.01c1.1 0 2-.89 2-1.99v-8zm-7-4.5l5.5 5.5H15V5.5z"
    />
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
  </svg>
</span>
`;
